# zuco2-scientific-ml-pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
configs/: default.yaml
data/: README.md
docs/: DATA.md  PIPELINE.md
notebooks/: 01_zuco2_scientific_ml_pipeline.ipynb
scripts/: extract_notebook_code.py  run_pipeline.py  zuco2_pipeline.py
src/zuco2_pipeline/: __init__.py  cli.py  config.py  features.py  io.py  modeling.py  pipeline.py
tests/: test_config.py  test_features.py  test_io.py  test_modeling.py
